add allowAutoScale, minSize, maxSize to NodePoolConfig
